Fixed default color scheme

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -45,6 +45,7 @@
     var myChart = weightScaleChart()
             .width(600)
             .height(50)
+            .colors(colorArray)
             .legend(true)
             .legendHeight(80);
     d3.select('.inner')
